--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>it would seem I am on my way to become a web developer giorno.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>There's a lovely city in Japan named Morioh City. My real identity is Yoshikage Kira. </p>
       <h1>What are your favorite hobbies?</h1>
       <p>Details here...</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'm here to find out as well, these things take time.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I used Za Hando to erase your memory about what city I'm from.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To make websites in my personal space where time has completely stopped.</p>
     </section>
 
     <footer id="footer">
