capatilization of it to It

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>it would seem I am on my way to become a web developer giorno.</p>
+      <p>It would seem I am on my way to become a web developer giorno.</p>
       <h1>Where I'm From</h1>
       <p>There's a lovely city in Japan named Morioh City. My real identity is Yoshikage Kira. </p>
       <h1>What are your favorite hobbies?</h1>
